--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,20 @@
   --foreground: #171717;
 }
 
+
+* {
+    scroll-behavior: smooth;
+}
+::-webkit-scrollbar {
+  display: none;
+}
+@layer base {
+    input[type="number"]::-webkit-inner-spin-button,
+    input[type="number"]::-webkit-outer-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+  }
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
